Upload the stuff.

--- a/12-AdvancedFunctions/exercises/exercises-p1.html
+++ b/12-AdvancedFunctions/exercises/exercises-p1.html
@@ -34,7 +34,7 @@
         
         <script>
             // Exercise -- 12a
-            let add = function() {
+            let add = () => {
                 console.log(2 + 3);
             };
             add();
